fixed template notice and spacing at top of page

--- a/drupal/sites/all/themes/pivot/sass/_pivot-global.scss
+++ b/drupal/sites/all/themes/pivot/sass/_pivot-global.scss
@@ -1329,3 +1329,9 @@ body.ie8 {
 iframe.media-youtube-player {
   max-width: 100%;
 }
+
+
+#block-pivot-global-pivot-global-header-nav.block {
+	margin-bottom: 0px;
+}
+
